fixed gap in iPhone screen

--- a/src/components/doctor-own-profile/doctor-profile-voucher-card.scss
+++ b/src/components/doctor-own-profile/doctor-profile-voucher-card.scss
@@ -305,6 +305,10 @@
       }
     }
 
+    .voucher-card-info {
+      gap: 1.2rem;
+    }
+
     .voucher-card-promotion {
       font-size: 20px;
     }
